# maplib

./: .gitignore  CMakeLists.txt  readme.md
TrenchBroom/games/Blip/: Blip.fgd  GameConfig.cfg
cmake/: FindEigen3.cmake
src/: ModelBuilder.cpp  main.cpp  minunit.h  test.cpp  types.h
src/mapflib/: mapbuilder.cpp  mapbuilder.h  mapparser.cpp  mapparser.h  parser.cpp  parser.h  types.h
src/mapflib/qma/: geometry.h  matrix.h  parser.h  qmap.cpp  qmap.h  surfacequery.h  vector.h
test/: basic.map  minimal.map  orient_test.map  testmap.map  testmap_tb.map
